force-app/main/default/objects/AG_Service_Line_Item__c/AG_Service_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Service Line Item</label>
    <nameField>
        <displayFormat>SL-{0000000000}</displayFormat>
        <label>Service Line Item Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>