force-app/main/default/objects/AG_Service_Line_Item__c/fields/AG_Service_Request__c.field-meta.xml
<CustomField>
    <fullName>AG_Service_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Request</label>
    <referenceTo>AG_Service_Request__c</referenceTo>
    <relationshipLabel>Service Line Items</relationshipLabel>
    <relationshipName>Service_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>